--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin 
     xmlns="http://www.phonegap.com/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android" 
-    id="cordova-plugin-filechooser" 
+    id="com.megster.cordova.FileChooser" 
     version="1.0.1">
     
     <engines>
